[2021/1/11] Made rosestones generate with coral-like formations instead of the silly straight lines.
[2021/1/11] Made glowing rosestone more fragile.
[2021/1/10] Made oil extract compressible from certain seeds.
[2021/1/10] Updated mapgen messages to annoyingly blame players now. :)
[2021/1/10] Rosestone teleports now require fuel, but are still more fuel-efficient than other types of teleports.
[2021/1/10] Reduced the average length of rosestone (formerly nyan) spawns. The reason for this change is that, due to huge caverns, nyans were much easier to find than before large caverns were added to Minetest, several years ago. This change should hopefully make the number of nyan rainbows smaller, making them more valuable.
[2021/1/10] Reduced the range of obsidian gate hops so they're less powerful. This does not affect existing gates, of course.
[2021/1/10] Allow mushrooms to be grown on mossy cobble, where they are naturally found.
[2021/1/10] Gave a separate name to the brimstone ocean, "Abyssal Plain".
[2021/1/10] Updated the formspec shown to players on join. Political censorship and associated purges is/are TERRIBLE and has always led to very bad things. I don't know of any historical exceptions.
[2021/1/9] Renamed nyan cats to Glowing Rosestone Seed/Tail. This is partly due to trademark issues, and partly because the rainbows were just too ugly and silly.
[2021/1/9] Removed the ability to burn nyan cats/rainbows in the furnace. Who thought that was a good idea?
[2021/1/9] Players can't steal nyan cat heads out of teleports.
[2021/1/9] Allowed players to construct their own recall beacons using nyan cats and teleports. Put a cat head in the fuel slot to make it a recall beacon.
[2021/1/9] Enabled using nyan cat heads in teleports as infinite fuel.